# haskell-project

./: .gitignore  README.md  hie.yaml  package.yaml  stack.yaml  typeracer.cabal  wordWeights.txt
app/: Config.hs  Main.hs  TypingTest.hs  UI.hs
client/: package.yaml  stack.yaml  typeracer.cabal
client/app/: Lib.hs  Typeracer.hs  TypingTest.hs  UI.hs
client/cmd/: Main.hs
client/test/: notes.md
client/textfiles/: car.txt  passages.txt
cmd/: Main.hs
server/: stack.yaml  typeracer-server.cabal
server/src/: Main.hs
src/: Main.hs  TypingTest.hs  UI.hs
