Name:                typeracer-server
Version:             0.1.0
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable typeracer-server
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.12,
    mtl                       >= 2     && < 3,
    snap-core                 >= 1.0   && < 1.1,
    snap-server               >= 1.0   && < 1.2,
    text,
    websockets                >= 0.12.7

  if flag(development)
    build-depends:
      snap-loader-dynamic >= 1.0 && < 1.1
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
